# Projet_Bachelor_Scoring

./: .gitignore  README.md  db_dump.json  db_dump.sql  manage.py  pyproject.toml  render.yaml  requirements.txt
Models/: best_model.cbm  column_transformer.pkl  metadata.json
Notebooks/: Scoring.ipynb
loan_manager/: admin.py  analyst_urls.py  analyst_views.py  api_views.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
loan_manager/migrations/: 0001_initial.py  0002_analystnote_loanapplication_delete_client_and_more.py  0003_alter_loanapplication_house_ownership_and_more.py  0004_analystprofile_clientprofile.py  0005_loanapplication_loan_amount.py  0006_remove_loanapplication_status_and_more.py  0007_analystnote_is_read.py  0008_document.py  0009_alter_loanapplication_age_and_more.py
loan_manager/ml/: predictor.py
loan_manager/static/css/: style.css
loan_manager/templates/loan_manager/: about.html  apply.html  base.html  dashboard.html  legal.html  login.html  messages.html  profile.html  register.html  review.html  success.html
loan_manager/templates/loan_manager/analyst/: dashboard.html  detail.html  login.html
loan_manager/templates/loan_manager/includes/: cookie_banner.html
projet_bachelor_scoring/: asgi.py  settings.py  urls.py  wsgi.py
